# tts_webui_extension.f5_tts

./: README.md  pyproject.toml  setup.py
extension_f5_tts/: gradio_app.py  main.py
tts_webui_extension/f5_tts/: gradio_app.py  main.py
